# nqwcl

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: main.yml
src/: bothdefs.h  cd_null.c  cl_cam.c  cl_demo.c  cl_ents.c  cl_input.c  cl_main.c  cl_parse.c  cl_pred.c  client.h  cmd.c  cmd.h  common.c  common.h  console.c  console.h  cvar.c  cvar.h  draw.h  gl_draw.c  gl_mesh.c  gl_model.c  gl_model.h  gl_ngraph.c  gl_rlight.c  gl_rmain.c  gl_rmisc.c  gl_rsurf.c  gl_screen.c  gl_vidlinux.c  gl_vidlinux_x11.c  gl_vidlinuxglx.c  gl_vidnt.c  gl_vidsdl.c  gl_warp.c  glquake.h  glquake2.h  in_sdl.c  in_win.c  input.h  (+33 more)
