cmake_minimum_required(VERSION 2.8)

set(SOURCES
    "src/buildnum.c"
    "src/cd_audio.c"
    "src/cd_linux.c"
    "src/cd_null.c"
    "src/cd_win.c"
    "src/cl_cam.c"
    "src/cl_demo.c"
    "src/cl_ents.c"
    "src/cl_input.c"
    "src/cl_main.c"
    "src/cl_parse.c"
    "src/cl_pred.c"
    "src/cl_tent.c"
    "src/cmd.c"
    "src/common.c"
    "src/console.c"
    "src/crc.c"
    "src/cvar.c"
    "src/draw.c"
    "src/d_edge.c"
    "src/d_fill.c"
    "src/d_init.c"
    "src/d_modech.c"
    "src/d_part.c"
    "src/d_polyse.c"
    "src/d_scan.c"
    "src/d_sky.c"
    "src/d_sprite.c"
    "src/d_surf.c"
    "src/d_vars.c"
    "src/d_zpoint.c"
    "src/gl_draw.c"
    "src/gl_mesh.c"
    "src/gl_model.c"
    "src/gl_ngraph.c"
    "src/gl_refrag.c"
    "src/gl_rlight.c"
    "src/gl_rmain.c"
    "src/gl_rmisc.c"
    "src/gl_rsurf.c"
    "src/gl_screen.c"
    "src/gl_test.c"
    "src/gl_vidlinux.c"
    "src/gl_vidlinuxglx.c"
    "src/gl_vidlinux_svga.c"
    "src/gl_vidlinux_x11.c"
    "src/gl_vidnt.c"
    "src/gl_warp.c"
    "src/in_null.c"
    "src/in_win.c"
    "src/keys.c"
    "src/mathlib.c"
    "src/md4.c"
    "src/menu.c"
    "src/model.c"
    "src/net_chan.c"
    "src/net_udp.c"
    "src/net_wins.c"
    "src/nonintel.c"
    "src/pmove.c"
    "src/pmovetst.c"
    "src/r_aclip.c"
    "src/r_alias.c"
    "src/r_bsp.c"
    "src/r_draw.c"
    "src/r_edge.c"
    "src/r_efrag.c"
    "src/r_light.c"
    "src/r_main.c"
    "src/r_misc.c"
    "src/r_part.c"
    "src/r_sky.c"
    "src/r_sprite.c"
    "src/r_surf.c"
    "src/r_vars.c"
    "src/sbar.c"
    "src/screen.c"
    "src/skin.c"
    "src/snd_dma.c"
    "src/snd_linux.c"
    "src/snd_mem.c"
    "src/snd_mix.c"
    "src/snd_win.c"
    "src/sys_linux.c"
    "src/sys_null.c"
    "src/sys_win.c"
    "src/vid_null.c"
    "src/vid_svgalib.c"
    "src/vid_win.c"
    "src/vid_x.c"
    "src/view.c"
    "src/wad.c"
    "src/zone.c"
)

set(HEADERS
    "src/adivtab.h"
    "src/anorms.h"
    "src/anorm_dots.h"
    "src/asm_draw.h"
    "src/asm_i386.h"
    "src/block16.h"
    "src/block8.h"
    "src/bothdefs.h"
    "src/bspfile.h"
    "src/cdaudio.h"
    "src/client.h"
    "src/cmd.h"
    "src/common.h"
    "src/console.h"
    "src/crc.h"
    "src/cvar.h"
    "src/draw.h"
    "src/d_iface.h"
    "src/d_ifacea.h"
    "src/d_local.h"
    "src/glquake.h"
    "src/glquake2.h"
    "src/gl_model.h"
    "src/gl_warp_sin.h"
    "src/input.h"
    "src/keys.h"
    "src/mathlib.h"
    "src/menu.h"
    "src/model.h"
    "src/modelgen.h"
    "src/net.h"
    "src/pmove.h"
    "src/protocol.h"
    "src/quakeasm.h"
    "src/quakedef.h"
    "src/render.h"
    "src/resource.h"
    "src/r_local.h"
    "src/r_shared.h"
    "src/sbar.h"
    "src/screen.h"
    "src/sound.h"
    "src/spritegn.h"
    "src/sys.h"
    "src/vid.h"
    "src/view.h"
    "src/wad.h"
    "src/winquake.h"
    "src/zone.h"
)

add_executable(nqwcl ${SOURCES} ${HEADERS})